<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PantallaPrincipal">

    <TextView
        android:id="@+id/Titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:text="@string/consulta_curp"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Ingresa"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/Titulo"
        android:text="@string/ingresa"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/Nombre"
        android:layout_width="174dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Ingresa"
        android:text="@string/nombre"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/inputNombre"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/Nombre"
        android:inputType="text"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/PrimerApellido"
        android:layout_width="174dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="162dp"
        android:text="@string/primer_apellido" />

    <TextView
        android:id="@+id/SegundoApellido"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="217dp"
        android:text="@string/segundo_apellido" />

    <EditText
        android:id="@+id/inputApellido1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/PrimerApellido"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:inputType="text"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/inputApellido2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/SegundoApellido"
        android:inputType="text"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/inputGenero"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/Genero"
        android:inputType="text"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/inputFecha"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/Fecha"
        android:inputType="text"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/Genero"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="133dp"
        android:text="@string/genero" />

    <TextView
        android:id="@+id/Fecha"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="193dp"
        android:text="@string/fecha_nacimiento" />

    <TextView
        android:id="@+id/Lugar"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="61dp"
        android:text="@string/estado" />

    <EditText
        android:id="@+id/inputEstado"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/Lugar"
        android:layout_marginTop="-100dp" />

    <Button
        android:id="@+id/bFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/inputNombre"
        android:layout_alignStart="@+id/inputNombre"
        android:layout_alignTop="@+id/Fecha"
        android:onClick="mostrarCalendario"
        android:text="@string/bFecha" />
</RelativeLayout>

</ScrollView>